[gd_scene load_steps=5 format=3 uid="uid://dn3j6emnbhb00"]

[ext_resource type="Script" path="res://Scenes/gui/menus/opening_screen.gd" id="1_4pjln"]

[sub_resource type="LabelSettings" id="LabelSettings_lsamv"]
font_size = 52
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_d7d2l"]
font_size = 24
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4ml4y"]
font_size = 52
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="Opening_Screen" type="CanvasLayer"]
layer = 2
script = ExtResource("1_4pjln")

[node name="BlackRect" type="ColorRect" parent="."]
offset_left = 379.0
offset_top = 72.0
offset_right = 1541.0
offset_bottom = 1008.0
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -572.0
offset_top = -459.0
offset_right = 572.0
offset_bottom = 459.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.737255, 0, 0.203922, 1)

[node name="DarkRedRect" type="ColorRect" parent="."]
offset_left = 464.0
offset_top = 257.0
offset_right = 496.0
offset_bottom = 277.0
scale = Vector2(31.0459, 10.0365)
color = Color(0, 0, 0, 0.223529)

[node name="Label" type="Label" parent="."]
offset_left = 853.0
offset_top = 177.0
offset_right = 1070.0
offset_bottom = 252.0
text = "Scenario"
label_settings = SubResource("LabelSettings_lsamv")

[node name="ContinueButton" type="Button" parent="."]
offset_left = 840.0
offset_top = 760.0
offset_right = 1080.0
offset_bottom = 849.0
disabled = true
text = "Please Insert Username"

[node name="ScenarioLabel2" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -464.0
offset_top = -260.0
offset_right = 462.0
offset_bottom = -112.0
grow_horizontal = 2
grow_vertical = 2
text = "Welcome to the first floor of the CME Tower! Your mission begins here. Your team is known for promoting CME organizations, events, and resources. Unfortunately, important promotional materials have gone missing. You have one hour to recover these materials and set the stage for successful promotion."
label_settings = SubResource("LabelSettings_d7d2l")
autowrap_mode = 2

[node name="Objective List" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -12.0
offset_right = 162.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
text = "Player Name
"
label_settings = SubResource("LabelSettings_4ml4y")

[node name="NameField" type="LineEdit" parent="."]
offset_left = 776.0
offset_top = 616.0
offset_right = 1145.0
offset_bottom = 691.0

[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed" flags=18]
[connection signal="text_changed" from="NameField" to="." method="_on_name_field_text_changed"]
